--- a/ce1.htm
+++ b/ce1.htm
@@ -15,7 +15,7 @@ table {
 }
 </style>
 </head>
-<table border="0" cellpadding="0" cellspacing="10">
+<table border="0" cellpadding="0" cellspacing="10" width="900">
 <tbody>
 <tr>
 <td rowspan="5" id="logo"><img src="signature-ce.jpg" alt="" /></td>
