--- a/ce1.htm
+++ b/ce1.htm
@@ -25,22 +25,22 @@ table {
 </tr>
 <tr>
 <td>
-<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/personal-computer_1f4bb.png" width="20" height="20" caption="false" />&nbsp;<a href="http://ce-neopost-shipping.com">http://ce-neopost-shipping.com</a></p>
+<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/personal-computer_1f4bb.png" width="20" height="20" caption="false" />&nbsp;<a href="https://ce-neopost-shipping.com">https://ce-neopost-shipping.com</a></p>
 </td>
 </tr>
 <tr>
 <td>
-<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/scroll_1f4dc.png" alt="Proces verbaux" width="20" height="20" />&nbsp;<a href="http://ce-neopost-shipping.com/ce">http://ce-neopost-shipping.com/ce</a></p>
+<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/scroll_1f4dc.png" alt="Proces verbaux" width="20" height="20" />&nbsp;<a href="https://ce-neopost-shipping.com/ce">https://ce-neopost-shipping.com/ce</a></p>
 </td>
 </tr>
 <tr>
 <td>
-<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/electric-light-bulb_1f4a1.png" alt="" width="20" height="20" />&nbsp;<a href="http://ce-neopost-shipping.com/boite-a-idees">http://ce-neopost-shipping.com/boite-a-idees</a></p>
+<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/electric-light-bulb_1f4a1.png" alt="" width="20" height="20" />&nbsp;<a href="https://ce-neopost-shipping.com/boite-a-idees">https://ce-neopost-shipping.com/boite-a-idees</a></p>
 </td>
 </tr>
 <tr>
 <td>
-<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/sleuth-or-spy_1f575.png" alt="" width="20" height="20" />&nbsp;<a href="http://ce-neopost-shipping.com/contact-anonyme">http://ce-neopost-shipping.com/contact-anonyme</a></p>
+<p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/sleuth-or-spy_1f575.png" alt="" width="20" height="20" />&nbsp;<a href="https://ce-neopost-shipping.com/contact-anonyme">https://ce-neopost-shipping.com/contact-anonyme</a></p>
 </td>
 </tr>
 </tbody>
