change image size

--- a/ce1.htm
+++ b/ce1.htm
@@ -18,7 +18,7 @@ table {
 <table border="0" cellpadding="0" cellspacing="10" width="900">
 <tbody>
 <tr>
-<td rowspan="5" id="logo"><img src="Logo-CSE.png" alt="" /></td>
+<td rowspan="5" id="logo"><img src="Logo-CSE.png" alt="" width="350" /></td>
 <td>
 <p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/e-mail-symbol_1f4e7.png" width="20" height="20" caption="false" />&nbsp;<a href="mailto:ce.nsh@neopost.com">ce.nsh@neopost.com</a></p>
 </td>
