--- a/cse-2021.html
+++ b/cse-2021.html
@@ -18,7 +18,7 @@ table {
 <table border="0" cellpadding="0" cellspacing="10" width="900">
 <tbody>
 <tr>
-<td rowspan="5" id="logo"><img src="Logo-CSE-2021.png" alt="" width="350" /></td>
+<td rowspan="5" id="logo"><img src="CSE-QuadientShipping-RVB350.png" alt="" width="350" /></td>
 <td>
 <p><img src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/twitter/131/e-mail-symbol_1f4e7.png" width="20" height="20" caption="false" />&nbsp;<a href="mailto:ce.nsh_fr@quadient.com">ce.nsh_fr@quadient.com</a></p>
 </td>
